# chat-app

./: .gitignore
backend/: client.py  main.py  pyproject.toml
backend/api/: login.py  signup.py
backend/db/: session.py
backend/models/: models.py
backend/utils/: password.py  token.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/AuthForm/: AuthForm.module.css  AuthForm.tsx
frontend/src/components/Button/: Button.module.css  Button.tsx
frontend/src/components/Input/: Input.module.css  Input.tsx
frontend/src/hooks/: useAuthForm.tsx
frontend/src/pages/: LoginPage.tsx  SignupPage.tsx  TopPage.tsx
frontend/src/types/: types.ts
